<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application - Niambie</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>

    <string name="profile_picture_optional">Profile picture(Optional)</string>

    <string name="contacts">Contacts</string>

    <string name="speaker_off">Speaker Off</string>
    <string name="speaker_on">Speaker On</string>
    <string name="mute_off">Mute Off</string>
    <string name="mute_on">Mute On</string>
    <string name="busy">Busy</string>
    <string name="timed_out">Timed Out</string>
    <string name="not_a_phone">Not A Phone</string>
    <string name="not_niambie">Not Niambie</string>

    <string name="mcwc_scan">Scan</string>
    <string name="mcwc_scanning">Scanning. . .</string>
    <string name="mclwc_no_contacts">There are no contacts! :-(</string>

    <string name="h_hello_what">Hello. :-) What would you like to do?</string>
    <string name="h_make_call">Make A Call</string>
    <string name="h_receive_call">Receive A Call</string>

    <string name="ic_accept">Accept</string>
    <string name="ic_reject">Reject</string>

    <string name="cis_speaker">Speaker</string>
    <string name="cis_mute">Mute</string>
    <string name="cis_end_call">End Call</string>

    <string name="cisc_speaker">Speaker</string>
    <string name="cisc_mute">Mute</string>
    <string name="cisc_end_call">End Call</string>

    <string name="ce_call_back">Call Back</string>
    <string name="ce_message">Message</string>

    <string name="c_end_call">End Call</string>
    <string name="c_connecting">Connecting. . .</string>
    <string name="c_ringing">Ringing. . .</string>

    <string name="cd_header">Details</string>
    <string name="cd_name">Name: </string>
    <string name="cd_range_status">Range Status: </string>

    <string name="rc_waiting_for_call">Waiting for a call. . .</string>

    <string name="title_activity_call_in_session_client">CallInSessionClientActivity</string>
    <string name="title_activity_call_in_session_server">CallInSessionServerActivity</string>
    <string name="title_activity_incoming_call">IncomingCallActivity</string>
    <string name="title_activity_calling">CallingActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_make_call">MakeCallActivity</string>
    <string name="title_activity_receive_call">ReceiveCallActivity</string>

    <string name="fdac_client_choice">Would you like to start the client?</string>
    <string name="fdac_positive_button">Yes</string>
    <string name="fdac_negative_button">No</string>

    <string name="progress_dialog_setting_up">Setting up. . .</string>


</resources>
