<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    >

    <!-- View for when calling -->

    <!-- RelativeLayout where text will be displayed -->

    <RelativeLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:background="@color/green"

        android:id="@+id/c_rl_textviews"

        >

        <!-- TextView to display name of being called -->

        <TextView

            android:id="@+id/c_tv_name_of_called"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:text="Caller Name"

            android:layout_alignParentLeft="true"

            android:textColor="@color/white"

            android:padding="12dp"

            android:textSize="@dimen/text_size_large"

            android:textStyle="bold"

            />

        <!-- TextView to display the status of the calling process -->

        <TextView

            android:id="@+id/c_tv_status"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:text="@string/c_connecting"

            android:textStyle="bold|italic"

            android:layout_alignParentRight="true"

            android:paddingTop="24dp"

            android:paddingRight="12dp"

            android:textColor="@color/white"

            android:textSize="@dimen/text_size_medium"

            />


    </RelativeLayout>

    <!-- Linear Layout to display speaker, mute, and end call buttons -->

    <LinearLayout

        android:id="@+id/c_ll_speaker_mute_end_call_buttons"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:layout_alignParentBottom="true"

        >

        <!-- Button for speaker -->

        <Button

            android:id="@+id/c_b_speaker"

            android:layout_width="0dp"

            android:layout_height="match_parent"

            android:text="@string/speaker_off"

            android:layout_weight="1"

            android:background="@color/white"

            android:textSize="@dimen/text_size_extra_extra_extra_large"

            android:layout_margin="@dimen/margin_small"

            />

        <!-- Button for mute -->

        <Button

            android:id="@+id/c_b_mute"

            android:layout_width="0dp"

            android:layout_height="match_parent"

            android:text="@string/mute_off"

            android:layout_weight="1"

            android:background="@color/white"

            android:layout_margin="@dimen/margin_small"

            android:textSize="@dimen/text_size_extra_extra_extra_large"

            />

        <!-- Button for end call -->

        <Button

            android:id="@+id/c_b_end_call"

            android:layout_width="0dp"

            android:layout_height="match_parent"

            android:text="@string/c_end_call"

            android:layout_weight="1"

            android:background="@color/red"

            android:layout_margin="@dimen/margin_small"

            android:textSize="@dimen/text_size_extra_extra_extra_large"

            />

    </LinearLayout>

    <!-- ImageView for caller picture -->

    <ImageView

        android:id="@+id/c_iv_caller_picture"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:contentDescription=""

        android:src="@drawable/blank_profile"

        android:layout_below="@id/c_rl_textviews"

        android:layout_above="@id/c_ll_speaker_mute_end_call_buttons"

        />

</RelativeLayout>
